--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,11 @@
 .App {
-  text-align: center;
-}
+  width: 400px;
+  height: 400px;
+  margin-left: 10px;
+  margin-top: 10px;
+ }
 
-.App-logo {
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -26,13 +29,40 @@
 
 .App-link {
   color: #61dafb;
+}  */
+
+button{
+  width: 50px;
+  height: 50px;
+  background-color: white;
+  border: 1px solid lightgray;
 }
 
-@keyframes App-logo-spin {
+button.operator{
+  background-color: lightgray;
+}
+
+.calculator{
+  display: grid;
+  grid-template-columns: repeat(4,50px);
+}
+
+.display{
+  grid-column-start: 1;
+  grid-column-end: 5;
+  height: 40px;
+  font-size: 30px;
+  text-align: right;
+  border: 1px solid black;
+  padding-right: 10px;
+  padding-top: 5px;
+}
+
+/* @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
-}
+} */
